--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidfeaturemaker">
 
-<application
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        android:theme="@style/AppTheme.NoActionBar">
+        <!--android:theme="@style/AppTheme.NoActionBar">-->
         <activity
             android:label="@string/calibration"
             android:name=".Calibration"
@@ -31,9 +31,8 @@
         android:largeScreens="true"
         android:anyDensity="true" />
 
-    <uses-sdk android:minSdkVersion="8" />
-
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
